SUBDIRS =                  \
	  IO               \
          Splines          \
          SpecialFunctions \
          Random           \
          Integration      \
          MatrixOps        \
          Fitting          \
          DFT              \
          PH               \
          MPI              \
          Distributed      \
          Ewald            \
          FFT              \
          PairAction       \
          PlaneWavePHDFT   \
          Atom           

