bin_PROGRAMS = TestRadialWF TestDFTAtom

TestRadialWF_SOURCES =       \
   TestRadialWF.cc           \
   RadialWF.cc               \
   ../PH/CoulombPot.cc       \
   ../Splines/CubicSpline.cc \
   ../IO/InputOutput.cc      \
   ../IO/InputOutputHDF5.cc  \
   ../IO/InputOutputASCII.cc \
   ../IO/InputOutputXML.cc

TestDFTAtom_SOURCES =           \
   RadialWF.cc                  \
   TestDFTAtom.cc               \
   DFTAtom.cc                   \
   ../PH/CoulombPot.cc          \
   ../PH/QuinticPH.cc           \
   ../PH/ScreenedPot.cc         \
   ../PH/SplinePot.cc           \
   ../PH/HeAzizPot.cc           \
   ../PH/Potential.cc           \
   ../Splines/CubicSpline.cc    \
   ../Splines/QuinticSpline.cc  \
   ../Splines/QuinticSplines.f  \
   ../DFT/Functionals.cc        \
   ../DFT/ExCorr.cc             \
   ../IO/InputOutput.cc         \
   ../IO/InputOutputHDF5.cc     \
   ../IO/InputOutputASCII.cc    \
   ../IO/InputOutputXML.cc
